--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    implementation project(path: ':elastic_view')
+    implementation 'com.github.armcha:ElasticView:0.2.0'
 }
